other/block-cluster-admin-from-ns/.chainsaw-test/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: testnamespace
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
