other/block-cluster-admin-from-ns/.chainsaw-test/good-pod-not-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: testnamespace
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
