other/block-cluster-admin-from-ns/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
